responder mensaje contacto

--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -8,6 +8,10 @@
             'frameWidth':   600,
             'frameHeight':  500,
         });
+
+        $("#responder").click(function(){
+               $("textarea_responder").show();
+        })
       });
 </script>
 
