--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -9,7 +9,7 @@
         objAH.showOverlay   = true;  
         objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
         objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
-        objAH.perfil        = $("#perfiles_ref").val();
+        objAH.ejemplar      = $("#tipo_nivel3_id").val();
         objAH.sendToServer();
     }
     
