--- a/opac/htdocs/opac-tmpl/temas/info/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/info/includes/opac.css
@@ -929,6 +929,12 @@ body textarea:focus {
     width: 25px;
 }
 
+.icon_estvirtuales {
+    background: transparent url(../imagenes/iconos/estvirtuales.png) no-repeat;
+    height: 25px;
+    width: 25px;
+}
+
 .icon_marc {
     background: transparent url(../imagenes/iconos/marc.png) no-repeat;
     height: 25px;
