--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -1153,7 +1153,8 @@ a.signin.menu-open span {
 
 /* ====================================  */
 #searchform_main {
-    border-radius: 4px;
+    border: 2px solid #496E6D;
+	border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
