--- a/opac/htdocs/opac-tmpl/temas/test/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/test/includes/opac.css
@@ -1153,6 +1153,7 @@ a.signin.menu-open span {
 
 /* ====================================  */
 #searchform_main {
+    border: 2px solid #496E6D;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
