--- a/opac/htdocs/opac-tmpl/includes/opac-structure.css
+++ b/opac/htdocs/opac-tmpl/includes/opac-structure.css
@@ -1,3 +1,6 @@
+/* Estructura de posicionamiento, tamaños de fuente y medidas */
+
+
 @IMPORT url("/includes/css/fancybox.css");
 
 @IMPORT url("/includes/css/ui.stars.css");
