--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -10,6 +10,7 @@
         objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
         objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
         objAH.ejemplar      = $("#tipo_nivel3_id").val();
+        objAH.nivel         = $("#eleccion_nivel").val();
         objAH.sendToServer();
     }
     
