--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -10,6 +10,8 @@
         $('.fancy_link').fancybox({
             'frameWidth':   600,
             'frameHeight':  500,
+            'showOverlay':true,
+            'overlayOpacity' :.6,
         });
 
       });
