--- a/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
+++ b/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
@@ -18,7 +18,7 @@
 	
 	<body>
 	
-	  <div class="page-container">
+	  <div class="page-container page-container-mail" style="">
 	    
 			<div class="header"> 
 			      <!-- A.1 HEADER TOP --> 
