--- a/opac/htdocs/opac-tmpl/temas/economicas/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/economicas/includes/opac.css
@@ -33,7 +33,10 @@ body input[type="text"] {
 
 .page-container {
 	border: solid 1px rgb(150, 150, 150);
-    background: url(../imagenes/fondo_home.png) no-repeat #FFFFFF;
+}
+
+.page-container-background {
+	background: url(../imagenes/fondo_home.png) no-repeat #FFFFFF;
 }
 
 .page-container-mail {
@@ -1158,7 +1161,7 @@ a.signin.menu-open span {
 
 /* ====================================  */
 #searchform_main {
-    border: 2px solid #496E6D;
+    border: 2px solid #4E6595;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
