--- a/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
+++ b/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
@@ -19,7 +19,7 @@
         <a href="http://windows.microsoft.com/es-XL/internet-explorer/downloads/ie" target="_blank"><img alt="Internet Explorer" src="[% temas %]/[% user_theme_intra %]/includes/images/internet_explorer_logo.png" border="0"/></a>
         <input type="hidden" name="acepto_browser" value="1" />
         <p>Si no quiere actualizar su navegador en este momento, puede continuar navegando MERAN.</p>
-        <p><input type="submit" value="[% 'Seguir utilizando MERAN' | i18n %]" /></p>
+        <p><input type="submit" value="[% 'Continuar hacia el cat&aacute;logo' | i18n %]" /></p>
     </form>
 </div>
 </body>
