--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -38,10 +38,10 @@
 
             <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0 width=100%>
                 <tr class="titulo_tabla_resultado">
+                    <td style="width: 11%;">[% "Tipo" | i18n %]</td>
                     <td width="35%" class="click" onclick="ordenarPor('titulo')">
                         [% "T&iacute;tulo" | i18n %]
                     </td>
-                    <td> </td>
                     <td width=28%" class="click" onclick="ordenarPor('autor')">
                         [% "Autor" | i18n %]
                     </td>
@@ -56,8 +56,49 @@
             <!-- Actual Resultados de la b&uacute;squeda -->
             [% FOREACH SEARCH_RESULTS %]
                 <tr>
+
+                        <td class="titulo_result">
+                            [% IF portadas_grupo_cant > 0 %]
+                                    [% FOREACH portadas_grupo %]
+                                        [% IF loop.count < 4 %]
+                                            [% IF portada_registro %]
+                                                <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_big %]">
+                                                    <img name="cover"  VALUE="" BORDER=0 src="/uploads/covers/[% portada_registro %]" title="Portada">
+                                                </a>
+                                            [% ELSE %]
+                                                  <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
+                                                        alt="[% 'Sin Portada' | i18n %]"
+                                                        title="[% 'Sin Portada' | i18n %]" />
+                                            [% END %]
+                                        [% END %]
+                                    [% END %]
+                            [% ELSE %]
+                                [% IF portada_registro %]
+                                    [% IF portada_registro_big %]
+                                        <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_big %]">
+                                            <img alt="cover" src="/uploads/covers/[% NIVEL.portada_registro %]" title="Portada" />
+                                        </a>
+                                    [% ELSE %]
+                                        [% IF portada_registro_medium %]
+                                            <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_medium %]">
+                                                <img alt="cover" src="/uploads/covers/[% portada_registro %]" title="Portada" />
+                                            </a>
+                                        [% ELSE %]
+                                                <img alt="cover" src="/uploads/covers/[% portada_registro %]" title="Portada" />
+                                        [% END %]
+                                    [% END %]
+                                [% ELSE %]
+                                         <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
+                                              alt="[% 'Sin Portada' | i18n %]"
+                                              title="[% 'Sin Portada' | i18n %]" />
+                                [% END %]
+                            [% END %]
+                            <br />
+                            <center><div style="font-weight: bold; font-size: 10px; clear:both;" >[% cat_ref_tipo_nivel3_name %] </div></center>
+                        </td>
+
+
                     <td class="titulo_result">
-            
                         [% PERL %]
                             print C4::AR::Filtros::link_to( text =>     "[% HTML.escape(titulo) %]",
                                                             url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
@@ -66,21 +107,8 @@
                                                             class => "link_to_detail"
                                                         ) ;
                         [% END %]
-            
                     </td>
             
-                    <td class="titulo_result">
-                    [% IF portada_registro %]
-                        <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_big %]">
-                            <img name="cover"  VALUE="" BORDER=0 src="/uploads/covers/[% portada_registro %]" title="Portada">
-                        </a>
-                    [% ELSE %]
-                          <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
-                                alt="[% 'Sin Portada' | i18n %]"
-                                title="[% 'Sin Portada' | i18n %]" />
-                    [% END %]
-                    </td>
-
                     <td class="autor_result">
                         <a class="click" onClick="buscarPorAutor('[% nomCompleto %]')" title="[% 'Filtrar por Autor' | i18n %]">
                             [% nomCompleto %]
