para el mono q lo mira por TV

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -92,7 +92,7 @@ $(document).ready( function() {
 </fieldset>
 </div>
 
-<div id="datos_esquema" style="display: none;">
+<div id="datos_esquema" style="display: none; margin: 0 auto; width: 90%;">
 <!-- <div id="datos_esquema"> -->
 <fieldset>
     <legend class="titulo_legend">[% "Datos del esquema" | i18n %]</legend>
