--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -8,7 +8,7 @@
         objAH.debug         = true;
         objAH.showOverlay   = true;  
         objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
+        objAH.tipoAccion    = 'MOSTRAR_TABLA_CAMPO';
         objAH.ejemplar      = $("#tipo_nivel3_id").val();
         objAH.nivel         = $("#eleccion_nivel").val();
         objAH.sendToServer();
@@ -19,17 +19,43 @@
         zebra("tabla_datos");  
     }
     
-    function actualizarOrden(){
+    var campo;
+    function editSubcampos(campo_parametro){
+        campo               = campo_parametro;
+        objAH               = new AjaxHelper(updateEditSubcampos);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;  
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
+        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
+        objAH.campo         = campo;
+        objAH.sendToServer();
+    }
+    
+    function updateEditSubcampos(responseText){
+        $("#tablaResultSubCampos").html(responseText);
+        zebra("tabla_datos_sub_campos");  
+    }
+    
+    function actualizarOrdenSubCampos(){
+        objAH               = new AjaxHelper(updateSortableSC);
+        objAH.debug         = true;
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
+        objAH.showOverlay   = true;
+        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_SUBCAMPOS";
+        objAH.newOrderArray = $('#sortable_subcampo').sortable('toArray');
+        objAH.sendToServer(); 
+    }
+    
+    function updateSortableSC(){
+        editSubcampos(campo);        
+    }
+    
+    function actualizarOrdenCampo(){
         objAH               = new AjaxHelper(updateSortable);
         objAH.debug         = true;
         objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
         objAH.showOverlay   = true;
-        // si estamos agrupando por campo o no
-        if($("#ordenar_campos").is(':checked')){
-            objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
-        }else{
-            objAH.tipoAccion    = "ACTUALIZAR_ORDEN";
-        }
+        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
         objAH.newOrderArray = $('#sortable').sortable('toArray');
         objAH.sendToServer(); 
     }
@@ -87,3 +113,4 @@
 
 <div id="divAgregarModificarVisualizacion"></div>
 <div id="tablaResultCampos"></div>
+<div id="tablaResultSubCampos"></div>
