--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -10,17 +10,14 @@
         $('.fancy_link').fancybox({
             'frameWidth':   600,
             'frameHeight':  500,
-            'showOverlay':true,
-            'overlayOpacity' :.6,
         });
-
       });
-
 
       function responder(){
             $("#respuesta").wysiwyg();
             $(".responder").show(); 
             $(".wysiwyg").css('width','388px');   
+            $("#fancybox-wrap").css('top','25px');
             $("#respuestaIFrame").css('width','388px');
             $("#responder").attr('onclick', ' '); 
       }
