--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -4,11 +4,11 @@
 <script type="text/javascript"> 
       
         function responderMail(){
-                  
+                  startOverlay();
+                  $('#fancybox-overlay').css('z-index','1010');
                   objAH                     = new AjaxHelper(updateResponderMail);
                   objAH.url                 = URL_PREFIX+'/admin/rta_mensaje_contacto.pl';
                   objAH.debug               = true;
-//                   objAH.showOverlay         = true;
                   objAH.texto               = $('#respuesta').val();
                   objAH.asunto              = $('#asunto').val();
                   objAH.email               = $('#email').val();
@@ -19,6 +19,8 @@
         
         
         function updateResponderMail(responseText){
+            closeModal();
+           $('#fancybox-overlay').css('z-index','1001');
             if (!verificarRespuesta(responseText))
                     return(0);
             var Messages=JSONstring.toObject(responseText);
@@ -27,26 +29,23 @@
         }
 
 </script>
+ <div class="msj_contacto">
+    <h2>[% 'Asunto' | i18n %]: [% mensaje.getAsunto %]</h2>
+    <input type="hidden" id="asunto" name="asunto" value="[% mensaje.getAsunto %]">
 
-
-
-<div class="mensaje_contacto" style="width:400px;">
-
-        <h2>[% 'Asunto' | i18n %]: [% mensaje.getAsunto %]</h2>
-        <input type="hidden" id="asunto" name="asunto" value="[% mensaje.getAsunto %]">
         <fieldset>
         
             <legend>[% 'Cuerpo del mensaje' | i18n %]:</legend>
-            <div>[% mensaje.getMensaje %]</div>
+            <h3>[% mensaje.getMensaje %]</h3>
             <input type="hidden" name="mensaje_contacto" id="mensaje_contacto" value="[% mensaje.getMensaje %]">
-            
+
         </fieldset>
         <p>[% 'De' | i18n %]: [% mensaje.getApellido %], [% mensaje.getNombre %] ([% mensaje.getEmail %])</p>
         <input type="hidden" name="email" id="email" value="[% mensaje.getEmail %]">
-        <h1 id="responder" class="pagetitle" onclick="responder()" style="text-decoration:underline; font-size: 12px; cursor:pointer;"> [% 'Responder mensaje' | i18n %]</h1>
+        <h1 id="responder" class="pagetitle" onclick="responder()"> [% 'Responder mensaje' | i18n %]</h1>
                   <div class="responder" style="display:none;">
-                             <textarea id="respuesta" name="respuesta" class="self_review" style="width: 388px"></textarea>
-                             <p><input type="submit" onclick="responderMail()"  value="Aceptar"/></p>
+                            <textarea id="respuesta" name="respuesta" class="self_review" style="width: 377px"></textarea>
+                            <p><input type="submit" onclick="responderMail()"  value="Aceptar"/></p>
                   </div>
-                
 </div>
+
