--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -2013,10 +2013,6 @@ li.MARCHeader input {
 	background: none;
 }
 
-.mensaje_contacto {
-	background: InfoBackground;
-}
-
 ul li a:visited {
 	text-decoration: none;
 }
@@ -4739,6 +4735,119 @@ font-size:10pt;
 .fancybox_twitter{
   width: 350px;
 }
+
+
+/* DESDE ACA */
+
+
+#fancybox-outer{
+    min-width: 402px;
+}
+
+#fancybox-content{
+    min-width: 389px;
+}
+
+#fancybox-content fieldset{
+
+  border-radius: 5px 5px 5px 5px;
+  background-color:#fff;
+  border-color:none;
+  border-style:hidden;
+  
+}
+
+#fancybox-content a{
+    color:#fff;
+
+}
+
+#fancybox-content h2{
+    padding-left:5px;
+    color:#111;
+    font-size:14px;
+    border-radius: 5px 5px 5px 5px;
+  background-color:#fff;
+}
+
+#fancybox-content h3{
+    font-size:13px;
+}
+
+#fancybox-content h4{
+    font-size:12px;
+}
+
+#fancybox-content legend{
+    border-radius: 4px 4px 4px 4px;
+    background-color:#fff;
+    color:#111;
+}
+
+.msj_contacto #fancybox-wrap{
+    width: 424px;
+}
+
+
+.msj_contacto #fancybox-content{
+    width: 401px;
+}
+
+.msj_contacto p{
+    color:#fff;
+    font-style:italic;
+}
+
+
+.msj_contacto h1{
+    color:#fff;
+    text-decoration:underline; 
+    font-size: 12px; cursor:pointer;
+}
+
+
+.mensaje_contacto {
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    left: 0;
+    padding: 6px;
+  /*  position: fixed;*/
+    top: 0;
+    width: 600px;
+    z-index: 11;
+}
+
+/*.mensaje_contacto h2{
+    font-family: Arial;
+    font-size: 14px;
+    color:#fff;
+    padding-bottom:5px;
+
+}
+
+#contenido_mensaje{
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    color: #333333;
+    padding-top: 6px;
+
+}
+
+#contenido_mensaje p, h1{
+      padding-left:5px;
+        padding-bottom:5px;
+}*/
+
+
+
+
+/*  HASTA ACA*/
+
+
+
+
 /* Estilo mensaje de contacto (mainpage) */
 
 /*.msj_main{
