--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -38,9 +38,9 @@
     function updateActualizarTabla(responseText){
         $("#resultNovedades").html(responseText);
         $('.fancy_link').fancybox({
-                        onStart:function(){
-                              $('#state').css('display','');
-                        },
+//                         onStart:function(){
+//                               $('#state').css('display','');
+//                         },
                         onComplete:function(){
                               $('#state').css('display','none');     
                         }
